testsuite/tests/parser/should_fail/proposal-229c.stderr

proposal-229c.hs:6:3: error:
    Illegal bang-pattern (use BangPatterns):
    !x
